repc: Fix warning in generated code

Check the array bounds using sizeof before access to make the compiler
happy.

Otherwise the following warning is generated:

warning: array subscript 1 is above array bounds of ‘const int [1]’ [-Warray-bounds]

Fixes: QTBUG-97790
Change-Id: I52b36b065b9f62188e5bfc157081650ca3ee159e
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Brett Stottlemyer <bstottle@ford.com>
(cherry picked from commit acd888220b9d600fe057249d43bd3934ae0cbad5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>